<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ardunoid|Archery 2</string>
    <string name="title_activity_hit_count">ardunoid|Archery 2</string>
    <string name="action_settings">Settings</string>
    <string name="action_stats">Stats</string>
    <string name="action_hitcount">Hits</string>
    <string name="action_sync">Sync - Experimental</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_statsOverview">Overall</string>
    <string name="title_statsDay">single Day</string>
    <string name="title_statsComplete">Detailed overall</string>
    <string name="title_activity_stats_day">Scores/arrows by day</string>
    <string name="title_activity_hits_day">Daily Overview</string>
    <string name="title_activity_stats_overall_graph">Overall Stats</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
    <string name="arrows">Arrows</string>
    
    <string name="points">Points</string>
    <string name="pointsWall">Wall</string>
    <string name="points0">0</string>
    <string name="points1">1</string>
    <string name="points2">2</string>
    <string name="points3">3</string>
    <string name="points4">4</string>
    <string name="points5">5</string>
    <string name="points6">6</string>
    <string name="points7">7</string>
    <string name="points8">8</string>
    <string name="points9">9</string>
    <string name="points10">10</string>
    
    <string name="distance">Distance</string>
    <string name="distance3m">3 m</string>
    <string name="distance6m">6 m</string>
    <string name="distance12m">12 m</string>
    <string name="distance18m">18 m</string>

    <string name="target">Targettype</string>
    <string name="targetFita3x20">3x20cm</string>
    <string name="targetFita1x80">1x80cm</string>
    
    <string name="Blindshot">Blindshot</string>
    
    <string name="stop">Stop</string>
    <string name="start">Start</string>
        
	<string name="title_activity_timer">Timer</string>
	<string name="action_timer">Timer</string>

    <!-- About -->
    <string name="action_about">About</string>
    <string name="txtAboutNameLabel">Made by:</string>
    <string name="txtAboutNameValue">Sönke D.</string>
    <string name="txtAboutEmailLabel">Email:</string>
    <string name="txtAboutEmailValue">info@ardunoid.de</string>
    <string name="txtAboutWebLabel">Website</string>
    <string name="txtAboutWebValue">android.de</string>
    
    
    <string name="txtDialogDeleteHead">Delete?</string>
    <string name="txtDialogDeleteMessage">Delete this Entry</string>
    <string name="txtDialogBtnNegative">Nope!</string>
    <string name="txtDialogBrnPositive">Yep!</string>
    
    <string name="comment">Comment</string>
    <string name="hintComment">Comment for this shot</string>
    
    <!--  toasts -->
   	<string name="saveHitXPoints">saved hit: %s points!</string>
   	<string name="saveHitFailed">save hit failed :(</string>
    
    

</resources>
