<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<ListView android:id="@+id/android:list" android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="fill_horizontal"
        android:columnCount="3"
        android:stretchMode="columnWidth" >

        <TextView
            android:id="@+id/textDate"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/date" />

        <TextView
            android:id="@+id/textDistance"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_row="0"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/textTargettype"
            android:layout_column="0"
            android:layout_gravity="left|bottom"
            android:layout_row="0"
            android:text="@string/target" />

        <TextView
            android:id="@+id/lblBlindshot"
            android:layout_column="1"
            android:layout_gravity="left|center"
            android:layout_row="0"
            android:text="@string/Blindshot"
            android:visibility="gone"  />

        <TextView
            android:id="@+id/textBlindshot"
            android:layout_column="1"
            android:layout_gravity="right|center"
            android:layout_row="0"
            android:text="@string/Blindshot"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textScore"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </GridLayout>

</LinearLayout>
    