<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/arrows"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textSum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/score" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>